# simdcc

./: .gitignore  CMakeLists.txt  README.md
common/cuda/: helper_functions.h
common/synthesis/: base.h  cutil_subset.h  enlist.h  expand.h  for.h  gather.h  iteratable.h  pool.h
compiler/: CMakeLists.txt  base.h  cond_branch_analysis_pass.cc  cond_branch_analysis_pass.h  cuda_utils.h  dynamic_cuda_transform_pass.cc  dynamic_cuda_transform_pass.h  host_instrumentation_pass.cc  host_instrumentation_pass.h  kernel_info_pass.cc  kernel_info_pass.h  llvm-culink.cc  llvm_utils.h  memory_analysis_pass.cc  memory_analysis_pass.h
compiler/tutorial/: run.sh
cuda/: CMakeLists.txt  arm-cmd.ins  axpy.cu  base.h  bfs.cu  cmd.ins  common.mk  compiler  cond_branch_analysis_pass.cc  cuda_common.h  cuda_dynamic_runtime.cc  cuda_dynamic_runtime.h  cuda_util.h  deviceVars.decl  deviceVars.txt  driver_test.cu  gaussian_elimination.cu  gpucc-driver.py  gpuvm_rt.cu  gpuvm_rt.h  graph.h  guassian_elimination.cu  kernel_info_pass.cc  kernel_info_pass.h  mm.h  stream_compact.h  test_glang.cu  types.inc  x86_64-cmd.ins
cuda/bfs_kernels/: kernel.cu
cuda/sassi_runtime/: sassi_dictionary.hpp  sassi_intrinsics.h
emulator/: memory.cc  memory.h  register.h
llvm/: kernel.ll  kernel.ptx  sample  tutorial.cc
simulator/: main_test.cc  pe.h
src/: CMakeLists.txt  memory.cc  memory.h  register.h
synthesis/: CMakeLists.txt  blur.cc  codegen.h  examples.cc  ggtl.cc  glang.cc  glang.h
synthesis/polyhedral/: cgraph.py  client.py  cloog.py  dbtools.py
